# jupiter-iaa-azure

./: .dockerignore  .env.example  .gitignore  .tflint.hcl  .tfsec.yaml  Dockerfile  Makefile  README.md  agent.py  api.py  app.py  docker-compose.yml  ingest.py  logger_config.py  models.py  pyproject.toml  requirements.txt  scrapping_script.txt  test_scope_validation.py  ui.py  utils.py
.github/workflows/: deploy-api.yml  deploy-ui.yml  docker-api.yml  docker-ui.yml  docker_build.yml  python_checks.yml  terraform-validate.yml  terraform_examples.yml  terraform_validate.yml
Scripts/CI/: tf_check_all.sh
Scripts/RAG/: create_book_index.py  get_pdf_schema.py  index_examples.py  preprocessing.py  search_examples.py  upsert_examples.py
aux_files/: _utils.py  pinecone_stuff.py
config/: __init__.py  classification_rules.yaml  classifier_loader.py  config.py  config.yaml  logger_config.py  project_config.py
data/docs/: example_frontdoor.md  example_https.md  example_storage_static_web.md
data/index/: examples_terraform.jsonl
data/pdfs/: Libro-TF_esquema.json
docs/ejemplos-terraform/: ejemplo-storage.md  ejemplo-vnet.md  storage_account.tf
docs/terraform/: ejemplo-static-website.md  error.html  index.html  main.tf  outputs.tf  (+5 more)
knowledge-base-terraform/: estadisticas.txt
logs/: agent.json  api.json  app.json  errors.json  pdf_extractor.json  pdf_schema.json  performance.json  ui.json
modules/: chatbot.py  train.py
qdrant_config/: config.yaml
src/: api.py  config.py
tests/: test_metrics.py  test_scope_validation.py
utils/: aux_qdrant_ingest.py
(+370 files in other folders)
